--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<p>My favourite color is <span>Blue</span></p>
+	<p class = "favorite-color">My favorite color is <span>Blue</span></p>
 </body>
 
 </html>
